src/index.css
body {
  background-color: black !important;
}

@font-face {
  font-family: "Market_Deco";
  src: local("Market_Deco"), url("./assets/fonts/Market_Deco.ttf") format("truetype");
  font-weight: bold;
}

::-webkit-scrollbar {
  display: none;
}

.main {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.header {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 2em;
}

.header-border-box {
  display: flex;
  padding: 15px;
  border: 5px solid white;
}

.header-name {
  font-family: "Market_Deco";
  color: white;
  font-size: 2em;
  margin-top: 0.2em;
}

.select-name {
  margin: 1.5em;
  color: white;
  display: flex;
  justify-content: center;
}

.name-prompt {
  display: flex;
  justify-content: center;
}

.dropdown-button {
  margin-left: 1em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.dropdown-menu {
  overflow-y: scroll;
  max-height: 300px;
}

.select-user-group {
  margin-top: 3em;
  margin-left: 25%;
  margin-right: 25%;
}

.hours-cell {
  text-align: center;
  font-weight: 400;
}

.hours-table {
  margin-left: 5%;
  margin-top: 2em;
}

.center {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  margin-top: 2em;
}

.greeting {
  display: flex;
  justify-content: center;
  color: white;
}

.statistics {
  margin-top: 1.5em;
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  color: white;
}

.edit-button {
  margin-top: 1em;
}

.stat {
  margin: 0px;
  font-weight: 500;
}

.sign-button-container {
  display: flex;
  justify-content: center; 
}

.sign-button {
  margin: 3em;
  width: 15em;
  height: 7em;
}

.footer-buttons {
  position: fixed;
  bottom: 0px;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  justify-content: center;
}

.footer-buttons-free {
  display: flex;
  justify-content: center;
}

.footer-button-free {
  margin-bottom: 1.75em;
  margin-left: .25em;
  margin-right: .25em;
}

.footer-button {
  margin: .25em;
}

